# gerenciador-fin

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start_production.py
accounts/: views.py
controle_financeiro/: settings.py  settings_production.py  urls.py  wsgi_production.py
financeiro/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
financeiro/migrations/: 0001_initial.py  0002_produto_margem_lucro.py  0003_venda.py  0004_despesa.py  0005_despesa_usuario_produto_usuario_venda_usuario.py
templates/: base.html
templates/accounts/: change_password.html  login.html  profile.html  register.html
templates/financeiro/: categoria_confirmar_exclusao.html  categoria_form.html  categoria_lista.html  dashboard_financeiro.html  despesa_confirmar_exclusao.html  despesa_detalhe.html  despesa_form.html  despesa_lista.html  home.html  produto_confirmar_exclusao.html  produto_detalhe.html  produto_form.html  produto_lista.html  relatorio_detalhado.html  relatorios_receita_lucro.html  simulador_precificacao.html  venda_confirmar_exclusao.html  venda_detalhe.html  venda_form.html  venda_lista.html
