[project]
name = "gerenciador-fin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.7",
    "flask==3.0.0",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "requests==2.31.0",
    "whitenoise==6.6.0",
]
